fix text overflow on card

--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -38,4 +38,8 @@
 .movie__overview {
   color: #fff;
   font-size: 0.7rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
